# climate_scorecard_data_2022

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
data/data_packages/scorecard_data/: authority_scores.resource.yaml  datapackage.yaml  individual_answers.csv  individual_answers.resource.yaml  questions_list.resource.yaml  section_labels_and_weights.resource.yaml  section_scores.resource.yaml
data/data_packages/scorecards_by_council_group/: combined_strategic_authorities.csv  combined_strategic_authorities.resource.yaml  county_councils.csv  county_councils.resource.yaml  datapackage.yaml  district_councils.csv  district_councils.resource.yaml  northern_ireland.resource.yaml  (+1 more)
data/interim/: raw_section_marks.csv
data/raw/: all_filters.csv  questions.csv
docs/: _config.yml  index.md
docs/_datasets/: scorecard_data.md  scorecards_by_council_group.md
docs/_downloads/: scorecard-data-authority-scores.md  scorecard-data-individual-answers.md  scorecard-data-questions-list.md  scorecard-data-section-labels-and-weights.md  scorecard-data-section-scores.md  scorecard-data-xlsx.md  scorecards-by-council-group-combined-strategic-authorities.md  scorecards-by-council-group-county-councils.md  scorecards-by-council-group-district-councils.md  scorecards-by-council-group-northern-ireland.md  scorecards-by-council-group-single-tier.md  scorecards-by-council-group-xlsx.md
docs/_includes/: mysoc_collect.html
docs/_layouts/: dataset.html  download.html
notebooks/: test.ipynb
src/climate_scorecard_data_2022/: create_results.py  la_processing.py
tests/: test_climate_scorecard_data_2022.py
(+13 files in other folders)
